--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@fortawesome/free-regular-svg-icons": "^6.5.2",
 		"@fortawesome/free-solid-svg-icons": "^6.5.2",
 		"@fortawesome/react-fontawesome": "^0.2.2",
+		"framer-motion": "^11.3.0",
 		"next": "14.2.4",
 		"react": "^18",
 		"react-dom": "^18"
