--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
 		"@fortawesome/free-regular-svg-icons": "^6.5.2",
 		"@fortawesome/free-solid-svg-icons": "^6.5.2",
 		"@fortawesome/react-fontawesome": "^0.2.2",
+		"autoprefixer": "^10.4.20",
 		"framer-motion": "^11.3.0",
 		"next": "14.2.4",
+		"pg": "^8.12.0",
 		"react": "^18",
 		"react-dom": "^18"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
+		"@types/pg": "^8.11.6",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"eslint": "^8",
