--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
 		"@fortawesome/free-regular-svg-icons": "^6.5.2",
 		"@fortawesome/free-solid-svg-icons": "^6.5.2",
 		"@fortawesome/react-fontawesome": "^0.2.2",
+		"@vercel/postgres": "^0.10.0",
 		"autoprefixer": "^10.4.20",
 		"framer-motion": "^11.3.0",
 		"next": "14.2.4",
-		"pg": "^8.12.0",
+		"pg": "^8.13.0",
 		"react": "^18",
 		"react-dom": "^18"
 	},
