--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
 		"@fortawesome/react-fontawesome": "^0.2.2",
 		"@vercel/postgres": "^0.10.0",
 		"autoprefixer": "^10.4.20",
+		"firebase": "^11.0.1",
+		"firebase-admin": "^12.6.0",
 		"framer-motion": "^11.3.0",
+		"multer": "^1.4.5-lts.1",
 		"next": "14.2.4",
 		"pg": "^8.13.0",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-dom": "^18",
+		"sharp": "^0.33.5"
 	},
 	"devDependencies": {
+		"@types/multer": "^1.4.12",
 		"@types/node": "^20",
 		"@types/pg": "^8.11.6",
 		"@types/react": "^18",
